# haskell-typecheck-combinators

./: README.md  typecheck.cabal
examples/: Example.hs
src/Language/: Static.hs
src/Language/Static/: Combinators.hs  Error.hs  Type.hs
