name:                typecheck
version:             0.1.0
synopsis:            Type checker monad and combinators
homepage:            https://github.com/lightandlight/typecheck
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
copyright:           2016 Isaac Elliott
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Static
                     , Language.Static.Combinators
                     , Language.Static.Error
                     , Language.Static.Type
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite typecheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typecheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lightandlight/typecheck
